--- a/Project_main/requirements.txt
+++ b/Project_main/requirements.txt
@@ -75,9 +75,11 @@ jupyterlab_server==2.27.3
 kiwisolver==1.4.8
 Mako==1.3.9
 Markdown==3.7
+markdown-it-py==2.2.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mistune==3.1.3
 mlflow==2.21.2
 mlflow-skinny==2.21.2
@@ -126,6 +128,7 @@ referencing==0.36.2
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.4.0
 rpds-py==0.24.0
 rsa==4.9
 scikit-learn==1.6.1
