--- a/Project_main/requirements.txt
+++ b/Project_main/requirements.txt
@@ -29,6 +29,7 @@ defusedxml==0.7.1
 Deprecated==1.2.18
 distro==1.9.0
 docker==7.1.0
+dotenv==0.9.9
 executing==2.2.0
 fastapi==0.115.12
 fastjsonschema==2.21.1
@@ -49,6 +50,8 @@ httpcore==1.0.7
 httpx==0.27.2
 huggingface-hub==0.30.1
 idna==3.10
+imbalanced-learn==0.13.0
+imblearn==0.0
 importlib_metadata==8.6.1
 ipykernel==6.29.5
 ipython==9.0.2
@@ -83,15 +86,18 @@ mdurl==0.1.2
 mistune==3.1.3
 mlflow==2.21.2
 mlflow-skinny==2.21.2
+mpmath==1.3.0
 narwhals==1.33.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.4.2
 notebook==7.3.3
 notebook_shim==0.2.4
-numpy==2.2.4
+numpy==2.1.1
 openai==1.54.4
+opencv-python==4.11.0.86
 opentelemetry-api==1.31.1
 opentelemetry-sdk==1.31.1
 opentelemetry-semantic-conventions==0.52b1
@@ -108,6 +114,7 @@ prompt_toolkit==3.0.50
 protobuf==5.29.4
 psutil==7.0.0
 pure_eval==0.2.3
+py-cpuinfo==9.0.0
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -118,6 +125,7 @@ pydeck==0.9.1
 Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 python-json-logger==3.3.0
 pytz==2025.2
 pywin32==310
@@ -136,6 +144,7 @@ scipy==1.15.2
 seaborn==0.13.2
 Send2Trash==1.8.3
 six==1.17.0
+sklearn-compat==0.1.3
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
@@ -145,17 +154,22 @@ stack-data==0.6.3
 starlette==0.46.1
 streamlit==1.44.1
 streamlit-option-menu==0.4.0
+sympy==1.13.1
 tenacity==9.1.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 toml==0.10.2
+torch==2.6.0
+torchvision==0.21.0
 tornado==6.4.2
 tqdm==4.67.0
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2025.2
+ultralytics==8.3.109
+ultralytics-thop==2.0.14
 uri-template==1.3.0
 urllib3==2.2.3
 uvicorn==0.34.0
